# ginger

./: .gitignore  API.json  AUTHORS  COPYING  ChangeLog  IBM-license-blacklist  Makefile.am  README  __init__.py  autogen.sh  check-IBM-license-header.sh  configure.ac  ginger.conf  ginger.py  ginger.spec.in  i18n.py  index.html  kimchi-ginger.spec.in  params.json
build-aux/: genChangelog  pkg-version
contrib/: Makefile.am  check_i18n.py  ginger.spec.fedora.in  ginger.spec.suse.in  gingerd.service.fedora  make-deb.sh.in
contrib/DEBIAN/: Makefile.am  control.in  postinst
control/: Makefile.am  __init__.py  audisp_plugins.py  audit.py  auditdisp.py  backup.py  capabilities.py  cfginterfaces.py  conf.py  config.py  dasddevs.py  dasdpartitions.py  diskparts.py  filesystems.py  firmware.py  fru.py  graph.py  ibm_sep.py  interfaces.py  iscsitargets.py  log.py  log_volumes.py  network.py  nfsshares.py  ovsbridges.py  physical_vol.py  powermanagement.py  report.py  rules.py  sanadapters.py  sel.py  sensors.py  servers.py  servers_sensors.py  services.py  stgservers.py  storage_devs.py  swaps.py  syscall.py  sysmodules.py  (+2 more)
controls/: Makefile.am  __init__.py  backup.py  capabilities.py  dasdpartitions.py  diskparts.py  filesystems.py  firmware.py  ibm_sep.py  interfaces.py  network.py  physical_vol.py  powermanagement.py  sanadapters.py  sensors.py  storage_devs.py  sysmodules.py  users.py  vol_group.py
docs/: API.md  README.md
downloads/: ginger-2.0.0-0.el7.noarch.rpm  ginger-2.0.0-0.fc23.noarch.rpm  ginger-2.0.0-0.noarch.deb  ginger-2.0.0-0.noarch.rpm  ginger-2.1.0-0.el7.noarch.rpm  ginger-2.1.0-0.fc23.noarch.rpm  ginger-2.1.0-0.noarch.deb  ginger-2.1.0-0.noarch.rpm  ginger-2.2.0-0.el7.noarch.rpm  ginger-2.2.0-0.fc23.noarch.rpm  ginger-2.2.0-0.noarch.deb  ginger-2.2.0-0.noarch.rpm  ginger-2.3.0-0.el7.centos.noarch.rpm  ginger-2.3.0-0.fc24.noarch.rpm  ginger-2.3.0-0.noarch.deb  ginger-2.3.0-0.noarch.rpm  ginger-2.3.1-0.el7.centos.noarch.rpm  ginger-2.3.1-0.fc25.noarch.rpm  ginger-2.3.1-0.noarch.deb  ginger-2.3.1-0.noarch.rpm  ginger-2.4.0-0.el7.centos.noarch.rpm  ginger-2.4.0-0.fc25.noarch.rpm  ginger-2.4.0-0.noarch.deb  ginger-2.4.0-0.noarch.rpm  index.html
downloads/latest/: ginger.el7.centos.noarch.rpm  ginger.fedora.noarch.rpm  ginger.noarch.deb  ginger.opensuse.noarch.rpm
model/: Makefile.am  __init__.py  audisp_plugins.py  audit.py  auditdisp.py  backup.py  capabilities.py  cfginterfaces.py  conf.py  config.py.in  dasd_utils.py  dasddevs.py  dasdpartitions.py  diskparts.py  filesystem.py  firmware.py  fru.py  fs_utils.py  graph.py  ibm_sep.py  interfaces.py  iscsitargets.py  log.py  log_volume.py  mkgraph.py  model.py  netinfo.py  network.py  nfsshares.py  nw_cfginterfaces_utils.py  nw_interfaces_utils.py  ovsbridges.py  physical_vol.py  powermanagement.py  report.py  rules.py  sanadapters.py  sel.py  sensors.py  servers.py  (+10 more)
models/: Makefile.am  __init__.py  backup.py  cfginterfaces.py  dasd_utils.py  dasddevs.py  dasdpartitions.py  diskparts.py  filesystem.py  firmware.py  fs_utils.py  ibm_sep.py  interfaces.py  log_volume.py  model.py  netinfo.py  network.py  physical_vol.py  powermanagement.py  sanadapters.py  sensors.py  swaps.py  sysmodules.py  users.py  utils.py
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  de_DE.po  en_US.po  es_ES.po  fr_FR.po  gen-pot.in  ginger.pot  it_IT.po  ja_JP.po  ko_KR.po  pt_BR.po  ru_RU.po  zh_CN.po  zh_TW.po
tests/: Makefile.am  run_tests.sh.in  test_audisp_plugins.py  test_audit.py  test_auditconf.py  test_auditdisp.py  test_authorization.py  test_backup.py  test_cfginterfaces.py  test_configbackup_selenium.py  test_dasddevs.py  test_dasdpartitions.py  test_filesystems.py  test_firmware.py  test_firmwareprogress.py  test_fru.py  test_graph.py  test_ibmsep.py  test_interfaces.py  test_iscsi_targets.py  test_libuser.py  test_log.py  test_log_volume.py  test_nfs_shares.py  test_ovsbridges.py  test_partitions.py  test_physical_vol.py  test_powermanagement.py  test_report.py  test_rules.py  test_sel.py  test_sensors.py  test_servers.py  test_servers_sensors.py  test_services.py  test_storage_devs.py  test_swap.py  test_sysmodules.py  test_tasks.py  test_user_model.py  (+1 more)
ui/: Makefile.am
ui/config/: Makefile.am  tab-ext.xml
ui/css/: Makefile.am  ginger.css  host-admin.css
ui/images/: Makefile.am
ui/js/: Makefile.am  ginger-bootgrid.js  host-admin-addauditrule.js  host-admin-configauditrule.js  host-admin-editrule.js  host-admin-importauditrule.js  host-admin.js  host-audit.js  host-network-bond.js  host-network-enable-sriov.js  host-network-ovs.js  host-network-settings.js  host-network-vlan.js  host-network.js  host-server-fru.js  host-server-sdr.js  host-server-sel.js  host-server-temp.js  host-server.js  host-settings.js  host-storage-addswap.js  host-storage-filesystem.js  host-storage-iscsi.js  host-storage-partition.js  host-storage-vg.js  host-storage.js  host-sysmodules.js  host-system-services.js  util.js
ui/pages/: Makefile.am  host-add-server.html.tmpl  host-admin-ConfigAuditRule.html.tmpl  host-admin-EditAuditRule.html.tmpl  host-admin-ImportAuditRule.html.tmpl  host-admin-addAuditRule.html.tmpl  host-admin-editControlRule.html.tmpl  host-admin-editSystemRule.html.tmpl  host-admin.html.tmpl  host-audit.html.tmpl  host-network-bond.html.tmpl  host-network-enable-sriov.html.tmpl  host-network-ovs-add.html.tmpl  host-network-ovs-edit.html.tmpl  host-network-settings.html.tmpl  host-network-vlan.html.tmpl  host-server-fru.html.tmpl  host-server-sdr.html.tmpl  host-server-sel.html.tmpl  host-server-temp.html.tmpl  host-storage-add-swap.html.tmpl  host-storage-addpartitions.html.tmpl  host-storage-formatpartitions.html.tmpl  host-storage-fs-mount.html.tmpl  host-storage-iSCSI-discoverIQN.html.tmpl  host-storage-iSCSI-settings.html.tmpl  host-storage-iSCSI-targetsettings.html.tmpl  host-storage-partition-addtoVG.html.tmpl  host-storage-vg-add.html.tmpl  host-sysmodules-load.html.tmpl  host-sysmodules.html.tmpl  host-system-services.html.tmpl  host-upd-server.html.tmpl  i18n.html.tmpl  i18n.json.tmpl
(+43 files in other folders)
